fix: code editor wrap

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -114,7 +114,7 @@ a.link {
 }
 
 .my-md-content pre{
-  @apply border-l-2 border-primary rounded-l-none overflow-x-scroll p-2 my-4 bg-primary/10 rounded-xl whitespace-pre-wrap wrap-break-word break-all;
+  @apply border-l-2 border-primary rounded-l-none p-2 my-4 bg-primary/10 rounded-xl whitespace-pre-wrap wrap-break-word;
 }
 
 .my-section-tag:hover:before {
